[package]
name = "to_csv"
version = "0.1.0"
edition = "2024"
authors = ["John Bullard <johnbcoding@tutamail.com>"]
categories = ["encoding", "parser-implementations"]
description = "Lightweight and easy exports to CSV"
documentation = "https://docs.rs/to_csv"
keywords = ["csv", "comma", "delimited", "parser"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnBCoding/to_csv"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.98"
